--- a/School.html
+++ b/School.html
@@ -18,7 +18,7 @@
 	<img src="header.png" alt="collage"/>
 	<nav class="menu">
 		<ul>
-			<li><a href="Home.html">Home</a></li>
+			<li><a href="index.html">Home</a></li>
 			<li><a href="QuarantineLifestyle.html">Quarantine Lifestyle</a></li>
 			<li><a href="School.html">School</a></li>
 			<li><a href="EandB.html">Emack and Bolio's</a></li>
